# AbstractCircuitEmulator

./: CMakeLists.txt  main.cpp
Controller/: assembleclicked.cpp  assembleclicked.h  filereader.cpp  filereader.h  globalfilereader.cpp  globalfilereader.h  runclicked.cpp  runclicked.h
Model/: circuitwrapper.cpp  circuitwrapper.h  simulator.cpp  simulator.h
Model/GlobalDefinitions/: circuittype.h  typedef.h
Model/LC3/: lc3assembler.cpp  lc3assembler.h  lc3binarycodegen.cpp  lc3binarycodegen.h  lc3circuit.cpp  lc3circuit.h  lc3module.cpp
ModelView/: console.cpp  console.h  consoleglobal.cpp  consoleglobal.h
